feat: added new schemes, configs, & moved api clients into network dir

--- a/Base.xcconfig
+++ b/Base.xcconfig
@@ -1,5 +1,5 @@
 //
-//  Production.xcconfig
+//  Base.xcconfig
 //  DigitalMarket
 //
 //  Created by Zoe Schmitt on 4/16/22.
@@ -7,5 +7,3 @@
 
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
-
-#include "Base.xcconfig"
