--- a/DigitalMarket--iOS--Info.plist
+++ b/DigitalMarket--iOS--Info.plist
@@ -6,5 +6,14 @@
 	<string>$(API_URL)</string>
 	<key>API_KEY</key>
 	<string>$(API_KEY)</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>OpenSans-Bold.ttf</string>
+		<string>OpenSans-ExtraBold.ttf</string>
+		<string>OpenSans-Light.ttf</string>
+		<string>OpenSans-Medium.ttf</string>
+		<string>OpenSans-Regular.ttf</string>
+		<string>OpenSans-SemiBold.ttf</string>
+	</array>
 </dict>
 </plist>
