fix: search bar conditional properties to simplify render

--- a/DigitalMarket--iOS--Info.plist
+++ b/DigitalMarket--iOS--Info.plist
@@ -15,5 +15,7 @@
 		<string>OpenSans-Regular.ttf</string>
 		<string>OpenSans-SemiBold.ttf</string>
 	</array>
+	<key>UIUserInterfaceStyle</key>
+	<string>Light</string>
 </dict>
 </plist>
