feat: nft view complete

--- a/DigitalMarket--iOS--Info.plist
+++ b/DigitalMarket--iOS--Info.plist
@@ -2,10 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>API_URL</key>
-	<string>$(API_URL)</string>
 	<key>API_KEY</key>
 	<string>$(API_KEY)</string>
+	<key>API_URL</key>
+	<string>$(API_URL)</string>
+	<key>OPENSEA_URL</key>
+	<string>$(OPENSEA_URL)</string>
+	<key>POLYGON_SCAN_URL</key>
+	<string>$(POLYGON_SCAN_URL)</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>OpenSans-Bold.ttf</string>
@@ -15,7 +19,5 @@
 		<string>OpenSans-Regular.ttf</string>
 		<string>OpenSans-SemiBold.ttf</string>
 	</array>
-	<key>UIUserInterfaceStyle</key>
-	<string>Light</string>
 </dict>
 </plist>
