feat: added accessibility elements and created ui tests for home and account pages

--- a/DigitalMarket.xcodeproj/xcshareddata/xcschemes/DigitalMarket (iOS) Production.xcscheme
+++ b/DigitalMarket.xcodeproj/xcshareddata/xcschemes/DigitalMarket (iOS) Production.xcscheme
@@ -38,6 +38,26 @@
                ReferencedContainer = "container:DigitalMarket.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "DD3B393228318F3600142C09"
+               BuildableName = "UnitTests.xctest"
+               BlueprintName = "UnitTests"
+               ReferencedContainer = "container:DigitalMarket.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "DDF0242A28347EBF00C4F49D"
+               BuildableName = "DigitalMarketUITests.xctest"
+               BlueprintName = "DigitalMarketUITests"
+               ReferencedContainer = "container:DigitalMarket.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
