--- a/DigitalMarket.xcodeproj/xcshareddata/xcschemes/DigitalMarket (iOS) Development.xcscheme
+++ b/DigitalMarket.xcodeproj/xcshareddata/xcschemes/DigitalMarket (iOS) Development.xcscheme
@@ -20,6 +20,20 @@
                ReferencedContainer = "container:DigitalMarket.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "DD3B393228318F3600142C09"
+               BuildableName = "UnitTests.xctest"
+               BlueprintName = "UnitTests"
+               ReferencedContainer = "container:DigitalMarket.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -29,12 +43,32 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
-            skipped = "NO">
+            skipped = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "DD35E3E627FBC03300181D20"
                BuildableName = "Tests iOS.xctest"
                BlueprintName = "Tests iOS"
+               ReferencedContainer = "container:DigitalMarket.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "DD3B393228318F3600142C09"
+               BuildableName = "UnitTests.xctest"
+               BlueprintName = "UnitTests"
+               ReferencedContainer = "container:DigitalMarket.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "DDF0242A28347EBF00C4F49D"
+               BuildableName = "DigitalMarketUITests.xctest"
+               BlueprintName = "DigitalMarketUITests"
                ReferencedContainer = "container:DigitalMarket.xcodeproj">
             </BuildableReference>
          </TestableReference>
